// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Max count reached 1`] = `
HTMLCollection [
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Charger la position initiale de la camera (Début)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Charger (clic) ou enregistrer (clic long) la position à l'emplacement 1"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      1
    </span>
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Charger (clic) ou enregistrer (clic long) la position à l'emplacement 2"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      2
    </span>
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Charger (clic) ou enregistrer (clic long) la position à l'emplacement 3"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      3
    </span>
  </button>,
]
`;

exports[`Multiple saves 1`] = `
HTMLCollection [
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Charger la position initiale de la camera (Début)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Charger (clic) ou enregistrer (clic long) la position à l'emplacement 1"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      1
    </span>
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Charger (clic) ou enregistrer (clic long) la position à l'emplacement 2"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      2
    </span>
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Enregistrer la position (Ctrl+1~9)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        video_call
      </span>
      
      
    </div>
     
  </button>,
]
`;

exports[`Multiple saves with current 1`] = `
HTMLCollection [
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Charger la position initiale de la camera (Début)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    disabled=""
    title="Charger (clic) ou enregistrer (clic long) la position à l'emplacement 1"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      1
    </span>
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Charger (clic) ou enregistrer (clic long) la position à l'emplacement 2"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
    <span
      class="badge s-NMyTiX1zi6rz"
    >
      2
    </span>
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    disabled=""
    title="Enregistrer la position (Ctrl+1~9)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        video_call
      </span>
      
      
    </div>
     
  </button>,
]
`;

exports[`Single save 1`] = `
HTMLCollection [
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Charger la position initiale de la camera (Début)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        videocam
      </span>
      
      
    </div>
     
  </button>,
  <button
    class="transparent s-NMyTiX1zi6rz"
    title="Enregistrer la position (Ctrl+1~9)"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        video_call
      </span>
      
      
    </div>
     
  </button>,
]
`;
